<resources>
    <string name="app_name">18匠</string>
    <!-- 字体大小 -->
    <dimen name="font_huge">18dp</dimen>
    <dimen name="font_large">14dp</dimen>
    <dimen name="font_normal">14dp</dimen>
    <dimen name="font_small">12dp</dimen>
    <dimen name="font_small_fixed">12dp</dimen>
    //Home
    <string name="city_name">城市名称</string>
    <string name="toolbar_text">输入商户名/搜索词</string>
    <string name="toolbar_qiandao">签到</string>
    <string name="redianhuodong">热点活动</string>
    //My
    <string name="my_wdqgj">我的抢购卷</string>
    <string name="my_wdyhj">我的优惠卷</string>
    <string name="my_wdzc">我的众筹</string>
    <string name="my_wdhd">我的活动</string>
    <string name="my_wdsc">我的收藏</string>
    <string name="my_yhmd">优惠买单</string>
    <string name="my_wdyy">我的预约</string>
    <string name="my_wdshxx">我的生活信息</string>
    <string name="my_qmjjr">全民经纪人</string>
    <string name="my_jfdh">积分兑换</string>
    <string name="my_wdkd">我的快递</string>
    <string name="my_txsq">提现申请</string>
    <string name="my_xxzx">消息中心</string>
    <string name="my_wdxx">我的消息</string>
    <string name="my_titles">我的</string>
    <string name="my_dengl">未登录</string>
    <string name="my_denglsj">未登录</string>
    <string name="my_wdjf_titles">67分</string>
    <string name="my_wdye_titles">0元</string>
    <string name="my_wdjf">我的积分</string>
    <string name="my_wdye">我的余额</string>
    <string name="my_wdqd">我的签到</string>
    <string name="my_wdcz">充值</string>
    <string name="my_wdqgs">我的抢购</string>
    <string name="my_wdgw">我的购物</string>
    <string name="my_wddc">我的订餐</string>
    <string name="my_wddz">我的订座</string>
    <string name="my_wdyg">我的云购</string>
    <string name="my_jdyy">酒店预约</string>
    <string name="hs0">0</string>
    <string name="myjifenshangpin">我的积分商品</string>
    <string name="tuichu">退出当前账号</string>
    <string name="dingdanxiangqing">订单详情</string>
    <string name="jiudianfukuan">酒店预约</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="home_xsqg_text">特色美食</string>
    <string name="home_xsqg_qian">¥40</string>
    <string name="home_xsqg_yjia">¥55</string>
    <string name="name_tese">"特色频道"</string>
    <string name="name_nong">"农家乐"</string>
    <string name="name_jia">"吃喝玩乐要啥有啥"</string>
    <string name="name_ding">"订饭店"</string>
    <string name="name_ding2">"订酒店"</string>
    <string name="name_shang">"商品众筹"</string>
    <string name="name_yi">"乐抢购"</string>
    <string name="name_fan">"不排队，提前订座"</string>
    <string name="name_fan2">"精选同城优质房源"</string>
    <string name="name_ping">"众筹的方式实现心愿"</string>
    <string name="name_yuan">"爆款大牌随心购"</string>
</resources>
