<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_heightPercent="30%"
        app:layout_marginPercent="2%w">

        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.zhy.android.percent.support.PercentRelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_below="@+id/my_wdqg_image"
                    android:gravity="center"
                    android:text="@string/my_wdqgs"
                    android:textSize="@dimen/size_14dp"
                    app:layout_heightPercent="30%h" />

                <ImageView
                    android:id="@+id/my_wdqg_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_centerHorizontal="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/wdqg"
                    app:layout_heightPercent="60%h"
                    app:layout_marginPercent="5%h"
                    app:layout_widthPercent="60%h" />
            </com.zhy.android.percent.support.PercentRelativeLayout>

            <com.zhy.android.percent.support.PercentRelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/my_wdgw_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_centerHorizontal="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/wdgw"

                    app:layout_heightPercent="60%h"

                    app:layout_marginPercent="5%h"
                    app:layout_widthPercent="60%h" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_below="@+id/my_wdgw_image"
                    android:gravity="center"
                    android:text="@string/my_wdgw"
                    android:textSize="@dimen/size_14dp"
                    app:layout_heightPercent="30%h" />
            </com.zhy.android.percent.support.PercentRelativeLayout>

            <com.zhy.android.percent.support.PercentRelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/my_wddc_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_centerHorizontal="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/wddc"
                    app:layout_heightPercent="60%h"
                    app:layout_marginPercent="5%h"
                    app:layout_widthPercent="60%h" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_below="@+id/my_wddc_image"
                    android:gravity="center"
                    android:text="@string/my_wddc"
                    android:textSize="@dimen/size_14dp"
                    app:layout_heightPercent="30%h" />
            </com.zhy.android.percent.support.PercentRelativeLayout>
        </com.zhy.android.percent.support.PercentLinearLayout>

        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.zhy.android.percent.support.PercentRelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/my_wddz_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_centerHorizontal="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/wddz"
                    app:layout_heightPercent="60%h"
                    app:layout_marginPercent="5%h"
                    app:layout_widthPercent="60%h" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_below="@+id/my_wddz_image"
                    android:gravity="center"
                    android:text="@string/my_wddz"
                    android:textSize="@dimen/size_14dp"
                    app:layout_heightPercent="30%h" />
            </com.zhy.android.percent.support.PercentRelativeLayout>

            <com.zhy.android.percent.support.PercentRelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/my_wdyg_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_centerHorizontal="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/wdyg"
                    app:layout_heightPercent="60%h"
                    app:layout_marginPercent="5%h"
                    app:layout_widthPercent="60%h" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_below="@+id/my_wdyg_image"
                    android:gravity="center"
                    android:text="@string/my_wdyg"
                    android:textSize="@dimen/size_14dp"
                    app:layout_heightPercent="30%h" />
            </com.zhy.android.percent.support.PercentRelativeLayout>

            <com.zhy.android.percent.support.PercentRelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/my_wdjdyy_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_centerHorizontal="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/jdyy"
                    app:layout_heightPercent="60%h"

                    app:layout_marginPercent="5%h"
                    app:layout_widthPercent="60%h" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_below="@+id/my_wdjdyy_image"
                    android:gravity="center"
                    android:text="@string/my_jdyy"
                    android:textSize="@dimen/size_14dp"
                    app:layout_heightPercent="30%h" />
            </com.zhy.android.percent.support.PercentRelativeLayout>
        </com.zhy.android.percent.support.PercentLinearLayout>
    </com.zhy.android.percent.support.PercentLinearLayout>

</com.zhy.android.percent.support.PercentLinearLayout>